# final-project-website-submission-f25-t18-f25-poet-of-post-office

./: ESE5190 F25 Final Project BOM.xlsx  README.docx  README.md
docs/: README.md  _config.yml
esp_kws/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp_kws/main/: CMakeLists.txt  Status_server.c  Status_server.h  audio_frontend.c  audio_frontend.h  eval_one_wav.py  idf_component.yml  kws_inference.cpp  kws_inference.h  main.cpp  model_data.cc  model_data.h  wifi_connect.c  wifi_connect.h
glove/: newmain.c  pinout.xlsx  platformio.ini  ui.c  ui.h
glove/src/: LCD_GFX.c  LCD_GFX.h  LED.c  LED.h  ST7735.c  ST7735.h  main.c  pulse_sensor.c  pulse_sensor.h  ui.c  ui.h
project.X/: LCD_GFX.h  newmain.c
project.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  configurations.xml  project.xml
project.X/nbproject/private/: configurations.xml  private.xml
project.X/queuelogs/: debugtool.txt
